work on transaction admin panel

--- a/client/admin/admin_layout.html
+++ b/client/admin/admin_layout.html
@@ -8,6 +8,7 @@
     <title>Administrator Panel</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../resources/css/style.css">
 </head> 
 <body>
     <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
@@ -30,7 +31,7 @@
                     <div class="mt-1">
                         <div class="input-group mb-1">
                             <span class="btn btn-white border border-dark text-center">Administrator</span>
-                            <button type="submit" value="Send" class="btn btn-white border border-dark">Logout</button>
+                            <button type="submit" class="btn btn-white border border-dark">Logout</button>
                         </div>
                     </div>
                 </div>
