--- a/client/admin/index.html
+++ b/client/admin/index.html
@@ -8,11 +8,12 @@
     <title>Administrator Panel</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../resources/css/style.css">
 </head> 
 <body>
     <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Online Cinema</a>
+            <a class="navbar-brand" href="file:///C:/Users/piete/Documents/Projects/cpp401/client/admin/index.html">Online Cinema</a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
                 <span class="navbar-toggler-icon"></span>
@@ -30,7 +31,7 @@
                     <div class="mt-1">
                         <div class="input-group mb-1">
                             <span class="btn btn-white border border-dark text-center">Administrator</span>
-                            <button type="submit" value="Send" class="btn btn-white border border-dark">Logout</button>
+                            <button type="submit" class="btn btn-white border border-dark">Logout</button>
                         </div>
                     </div>
                 </div>
@@ -48,14 +49,14 @@
         
         <div class="container px-5">
             <div class="row justify-content-center" style="height: 400px;">
-                <div class="col-4 mb-4 rounded-3 m-5 h-100 border border-dark">
+                <div style="cursor: pointer" class="col-4 mb-4 rounded-3 m-5 h-100 border border-dark" onclick="location.href='file:///C:/Users/piete/Documents/Projects/cpp401/client/admin/movie/index.html'">
            <!-- <div class="col-4 mb-4 text-white bg-secondary bg-gradient shadow rounded-3 m-5 h-100"> -->
                     <div class="container-fluid py-5">
                         <h1 class="text-left">Movies</h1>
                     </div>
                 </div>
                 
-                <div class="col-4 mb-4 rounded-3 m-5 h-100 border border-dark">
+                <div style="cursor: pointer" class="col-4 mb-4 rounded-3 m-5 h-100 border border-dark" onclick="location.href='file:///C:/Users/piete/Documents/Projects/cpp401/client/admin/transaction/index.html'">
            <!-- <div class="col-4 mb-4 text-white bg-secondary bg-gradient shadow rounded-3 m-5 h-100"> -->
                     <div class="container-fluid py-5">
                         <h1 class="text-left">Transactions</h1>
