--- a/client/admin/login.html
+++ b/client/admin/login.html
@@ -8,6 +8,7 @@
     <title>Administrator Panel</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+		<link rel="stylesheet" href="../../../resources/css/style.css">
 </head> 
 <body>
     <div class="container body-content position-absolute top-50 start-50 translate-middle">
