--- a/client/user/index.html
+++ b/client/user/index.html
@@ -8,11 +8,12 @@
     <title>Online Cinema</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="../../../resources/css/style.css">
 </head> 
 <body>
     <nav class="navbar navbar-dark bg-dark fixed-top navbar-expand-md">
         <div class="container-fluid">
-			<a class="navbar-brand" href="#">Online Cinema</a>
+			<a class="navbar-brand" href="file:///C:/Users/piete/Documents/Projects/cpp401/client/admin/index.html">Online Cinema</a>
 
 	   		<!--
 				@if (Session["User"] != null)
@@ -54,8 +55,8 @@
                     </div>
                     <form onsubmit="window.location = '/Home/Search/?param=' + search.value; return false;" class="mt-1">
                         <div class="input-group mb-1">
-                            <input id="search" placeholder="Search Movies" type="search" name="search" class="form-control">
-                            <button type="submit" value="Send" class="btn btn-success">Search</button>
+                            <input id="search" placeholder="Search Movies" name="search" class="form-control">
+                            <button type="submit" class="btn btn-success">Search</button>
                         </div>
                     </form>
                 </div>
