--- a/client/admin/login.html
+++ b/client/admin/login.html
@@ -8,7 +8,7 @@
     <title>Administrator Panel</title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-		<link rel="stylesheet" href="../../../resources/css/style.css">
+		<link rel="stylesheet" href="../../resources/css/style.css">
 </head> 
 <body>
     <div class="container body-content position-absolute top-50 start-50 translate-middle">
@@ -19,23 +19,22 @@
 		   <!-- <div class="col-4 mx-5 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
                     <div class="container-fluid py-5">
                         <h5 class="text-center">Online Cinema<br>Administrator Panel</h5>
-						<form>
+						<form action="javascript:void(0)" onsubmit="loginAdmin()">
 							<div class="row justify-content-center">
 								<div class="col-12 my-2">
 									<label class="control-label">Username</label>
-									<input class="form-control border border-dark">
+									<input id="username" class="form-control border border-dark" required>
 								</div>
 							</div>
 							<div class="row justify-content-center">
 								<div class="col-12 my-2">
 									<label class="control-label">Password</label>
-									<input class="form-control border border-dark">
+									<input id="password" class="form-control border border-dark" type="password" required>
 								</div>
 							</div>
 
 							<div class="row justify-content-center my-4">
-								<a class="col-4 btn btn-white border border-dark" type="submit">Login</a>
-						   <!-- <button class="col-4 btn btn-white border border-dark" type="submit">Login</button> -->
+								<button class="col-4 btn btn-white border border-dark" type="submit">Login</button>
 							</div>
 							
 						</form>
@@ -46,6 +45,6 @@
 
     </div>
 
-    <script src=""></script>
+    <script src="login.js"></script>
 </body>
 </html>
