--- a/client/user/app/index.html
+++ b/client/user/app/index.html
@@ -53,18 +53,33 @@
             </div>
         </div>
     </nav>
-    <div class="container body-content pt-5">
+    <div class="container body-content pt-4-half pb-5">
 
-        <div class="px-5">
-            <p class="pt-3"><h1><!-- Title --></h1></p>
+        <div class="row px-6 mt-5 mb-4 justify-content-center">
+            <div class="col px-7 bg-white border border-dark rounded-3">
+       <!-- <div class="px-5 w-auto text-white bg-secondary bg-gradient shadow rounded-3"> --> 
+                <div class="p-4-half text-center">
+                    <h2>Online Cinema</h2>
+                    <p>Online Cinema is a place where you can watch all of your favorite award-winning blockbuster movies. 
+                    All movies are available all in one place and we give them to you exclusively at a very low price!</p>
+                </div>
+            </div>
         </div>
 
-        <hr />
-        
-        <!-- Body -->
+        <div class="row px-5 g-4-half" id="cardRows">
+            <div class="col-3">
+                <div class="card shadow-sm" style="cursor: pointer" onclick="">
+                    <div class="card-body text-center">
+                            <img class="card-img-top py-1" />
+                        <h6 class="card-title  mb-0 mt-1 text-truncate">Star Wars: Rise of Skywalker</h5>
+                        <span class="card-subtitle text-muted">Rp 5,000</span>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </div>
 
-	<script src=""></script>
+	<script src="index.js"></script>
 </body>
 </html>
