--- a/client/admin/movie/edit.html
+++ b/client/admin/movie/edit.html
@@ -72,7 +72,7 @@
             <div class="row justify-content-center">
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Synopsis</label>
-                    <textarea id="synopsis" class="form-control border border-dark" required></textarea>
+                    <textarea id="synopsis" class="form-control border border-dark" maxlength="300" required></textarea>
                 </div>
                 <div class="col-3 mx-5 my-2">
                     <label class="control-label">Movie</label>
