--- a/client/user/auth/register.html
+++ b/client/user/auth/register.html
@@ -56,15 +56,51 @@
     <div class="container body-content pt-5">
 
         <div class="px-5">
-            <p class="pt-3"><h1><!-- Title --></h1></p>
+            <p class="pt-3"><h1>Register to Online Cinema</h1></p>
         </div>
 
         <hr />
-        
-        <!-- Body -->
 
-    </div>
+        <div class="container px-5">
+            <div class="row justify-content-center" style="height: 430px;">
+                <div class="col-4 m-4 rounded-3 h-100 border border-dark">
+           <!-- <div class="col-4 m-4 rounded-3 h-100 border border-dark bg-light bg-gradient"> -->
+                    <div class="container-fluid px-3 py-3">
+                        <form class="align-items-center" action="#" onsubmit="registerUser()">
+                            <div class="row justify-content-center">
+                                <div class="col-12 my-2">
+                                    <label class="control-label">Username</label>
+                                    <input id="username" class="form-control border border-dark" required>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="col-12 my-2">
+                                    <label class="control-label">Email</label>
+                                    <input id="email" class="form-control border border-dark" required>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="col-12 my-2">
+                                    <label class="control-label">Password</label>
+                                    <input id="password" class="form-control border border-dark" type="password" required>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center">
+                                <div class="col-12 my-2">
+                                    <label class="control-label">Confirm Password</label>
+                                    <input id="confirmPassword" class="form-control border border-dark" type="password" required>
+                                </div>
+                            </div>
+                            <div class="row justify-content-center mb-2 mt-4">
+                                <button class="col-4 btn btn-white border border-dark" type="submit">Register</button>
+                            </div>
+                        </form>
+                    </div>                    
+                </div>
+            </div>
+        </div>   
 
-	<script src=""></script>
+	<script src="register.js"></script>
+    <script src="/app/search.js"></script>
 </body>
 </html>
