work on movie details page 50%

--- a/client/admin/movie/index.html
+++ b/client/admin/movie/index.html
@@ -85,7 +85,7 @@
                     <td class="cell-pt">Consectetur</td>
                     <td class="cell-pt text-start">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</td>
                     <td class="cell-pt">Rp 5,000</td>
-                    <td><img style="width:150px; height:auto;" src="https://ae01.alicdn.com/kf/Hda510b54c6f143079a288919fa821cd3p/JAWS-VINTAGE-POSTER-Film-Kanvas-Cetakan-Seni-Dinding-untuk-Ruang-Tamu-Dekorasi-Kamar-Tidur.jpg_Q90.jpg_.webp"></td>
+                    <td><img style="width:150px; height:auto;" src="file://C:/Users/piete/Pictures/parasite-poster.jpg"></td>
                     <td class="container position-relative">
                         <div class="col position-absolute top-50 start-50 translate-middle">
                             <button class="btn btn-white border border-dark w-10 h-10 my-2" onclick="showUserEditBox(object['id'])">
