--- a/client/user/app/movie.html
+++ b/client/user/app/movie.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="/resources/css/style.css">
+    <link rel="stylesheet" href="../../../client/resources/css/style.css">
 </head> 
 <body>
     <nav class="navbar navbar-light bg-white fixed-top navbar-expand-md border border-dark">
@@ -55,43 +56,47 @@
     </nav>
     <div class="container body-content pt-4-half pb-5">
 
-        <div class="row px-6 mt-5 mb-4 justify-content-center">
-            <div class="col px-7 bg-white border border-dark rounded-3">
-       <!-- <div class="px-5 w-auto text-white bg-secondary bg-gradient shadow rounded-3"> --> 
-                <div class="p-4-half text-center">
-                    <h2>Online Cinema</h2>
-                    <p>Online Cinema is a place where you can watch all of your favorite award-winning blockbuster movies. 
-                    All movies are available all in one place and we give them to you exclusively at a very low price!</p>
+        <div class="row mt-5 mb-4 justify-content-center" id="movieDetails">
+            <div class="col-md-3 text-center">
+                <img src="file://C:/Users/piete/Pictures/parasite-poster.jpg" style="width:95%" />
+                <h4 class=""><b>Star Wars: Rise of Skywalker</b></h4>
+                <h5 class="">George Lucas</h5>
+                <h4 class="mb-3">5.0 ⭐</h4>
+                <div class="input-group justify-content-center">
+                    <span class="input-group-text border border-dark bg-white">Rp 5,000</span>
+                    <button type="submit" class="btn btn-white border border-dark">Buy Now</button>
+                </div>
+            </div>
+            <div class="offset-md-1 col-md-8">
+                <p class="fs-5 mb-1"><b>Synopsis</b></p>
+                <p class="fs-6 mb-1">After his retirement is interrupted by Gorr the God Butcher, a galactic killer who seeks the extinction of the gods, Thor Odinson enlists the help of King Valkyrie, Korg, and ex-girlfriend Jane Foster, who now wields Mjolnir as the Mighty Thor. Together they embark upon a harrowing cosmic adventure.</p>
+                <p class="fs-5 mb-1 mt-2"><b>Trailer</b></p>
+                <div class="row justify-content-center">
+                    <div class="col-auto ratio ratio-16x9" style="width:95%">
+                        <iframe src="file://C:/Users/piete/Videos/stock_nightsky.mp4" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="row px-5 g-4-half" id="cardRows">
-<!--            
-            <div class="col-3">
-                <div class="card shadow-sm" style="cursor: pointer" onclick="">
-                    <div class="card-body text-center">
-                            <img src="file://C:/Users/piete/Pictures/parasite-poster.jpg" style="width:auto; height:275px;" class="card-img-top w-100 py-1" />
-                        <h6 class="card-title mb-0 mt-1 text-truncate">Parasite</h5>
-                        <span class="card-subtitle text-muted fs-7">Rp 10,000</span>
+        <div class="row mt-5 mb-4">
+            <div class="col-7">
+                <form class="row justify-content-center">
+                    <h1 class="text-center mb-3">⭐⭐⭐⭐⭐</h1>
+                    <textarea class="form-control border border-dark text-center h-50 w-75" maxlength="300" placeholder="Write your review here..." required></textarea>
+                    <h4 class="text-center"><b>Star Wars: Rise of Skywalker</b></h4>
+                    <h5 class="text-center">George Lucas</h5>
+                    <h4 class="text-center mb-3">5.0 ⭐</h4>
+                    <div class="input-group justify-content-center">
+                        <span class="input-group-text border border-dark bg-white">Rp 5,000</span>
+                        <button type="submit" class="btn btn-white border border-dark">Buy Now</button>
                     </div>
-                </div>
-            </div>
-
-            <div class="col-3">
-                <div class="card shadow-sm" style="cursor: pointer" onclick="">
-                    <div class="card-body text-center">
-                            <img src="file://C:/Users/piete/Pictures/parasite-poster.jpg" style="width:auto; height:275px;" class="card-img-top w-100 py-1" />
-                        <h6 class="card-title mb-0 mt-1 text-truncate">Parasite</h5>
-                        <span class="card-subtitle text-muted fs-7">Rp 10,000</span>
-                    </div>
-                </div>
-            </div>
--->
+                </form>
+            </div>            
         </div>
 
     </div>
 
-	<script src="index.js"></script>
+	<script src="movie.js"></script>
 </body>
 </html>
