--- a/client/user/app/movie.html
+++ b/client/user/app/movie.html
@@ -82,37 +82,38 @@
         <div class="row mt-5 mb-3">
             <div class="col-6">
                 <div id="ratingForm">
-                    <!-- <form class="row justify-content-center px-5 mt-3 mb-4" action="#" onclick="">
+                    <form class="row justify-content-center px-5 mt-3 mb-4" action="#" onclick="addRating()">
                         <h1 id="rating" class="text-center mb-4">⭐⭐⭐⭐⭐</h1>
                         <textarea id="review" class="border border-dark form-control text-center w-75 py-4-half mb-3" maxlength="300" placeholder="Write your review here..." required></textarea>
                         <button class="border border-dark btn btn-white w-75" type="submit">Submit</button>
-                    </form> -->
+                    </form>
                 </div>
-                <div class="row">
-                    <!-- <div id="myRating" class=""> -->
-                        <div class="col-auto mx-1 mb-1">
-                            <div class="row mb-1">
-                                <span class="col-6 fs-5 text-start">Yurianika Yolanda</span>
-                                <span class="col-6 fs-5 text-end">
-                                    2.0 ⭐
-                                    <button id="popover" type="button" class="btn btn-white border border-white p-0" data-bs-toggle="popover" data-bs-html="true" data-bs-placement="right" 
-                                    data-bs-content="
-                                        <div class='row px-2 text-center py-0'>
-                                            <span style='cursor: pointer' class='my-1' onclick='loadEditRatingForm()'>Edit</span>
-                                            <hr class='my-1' />
-                                            <span style='cursor: pointer' class='my-1' onclick='deleteRating()'>Delete</span>
-                                        </div>
-                                    ">
-                                            <img class="d-flex justify-content-center" src="../../resources/icons/three-dots-vertical.svg" alt="Menu">
-                                        </button>
+                <div id="ratingRow" class="row">
+                    <div id="myRating" class="col-auto mx-1 mb-1">
+<!--
+                        <div class="row mb-1">
+                            <span class="col-6 fs-5 text-start">Yurianika Yolanda</span>
+                            <span class="col-6 fs-5 text-end">
+                                2.0 ⭐
+                                <button id="popover" type="button" class="btn btn-white border border-white p-0" data-bs-toggle="popover" data-bs-html="true" data-bs-placement="right" 
+                                data-bs-content="
+                                    <div class='row px-2 text-center py-0'>
+                                        <span style='cursor: pointer' class='my-1' onclick='loadEditRatingForm()'>Edit</span>
+                                        <hr class='my-1' />
+                                        <span style='cursor: pointer' class='my-1' onclick='deleteRating()'>Delete</span>
+                                    </div>
+                                ">
+                                        <img class="d-flex justify-content-center" src="../../resources/icons/three-dots-vertical.svg" alt="Menu">
                                     </button>
-                                </span>
-                                
-                            </div>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</p>
+                                </button>
+                            </span>
+                            
                         </div>
-                        <hr />
-                    <!-- </div> -->
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</p>
+-->
+                    </div>
+                    <hr id="myRatingSeparator" style="display: none" />
+<!--
                     <div class="col-auto mx-1 mb-1">
                         <div class="row mb-1 mb-1">
                             <span class="col-6 fs-5 text-start">User Name</span>
@@ -144,6 +145,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum elit ligula, posuere a justo malesuada</p>
                     </div>
                     <hr />
+-->
                 </div>
             </div>            
         </div>
